--- a/index.html
+++ b/index.html
@@ -7,15 +7,48 @@
 
 <style>
 body{font-family:Arial;margin:0;background:#fafafa}
-header{background:#ff7a00;color:#fff;padding:15px;text-align:center}
-#productos{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:10px;padding:10px}
-.card{background:#fff;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,.2)}
+header{background:#ff7a00;color:#fff;padding:15px;text-align:center;font-size:20px}
+#buscador{padding:10px}
+#buscador input{
+  width:100%;padding:10px;font-size:16px;
+  border-radius:6px;border:1px solid #ccc
+}
+#productos{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(160px,1fr));
+  gap:10px;padding:10px
+}
+.card{
+  background:#fff;border-radius:8px;
+  box-shadow:0 2px 8px rgba(0,0,0,.2)
+}
 .card img{width:100%;height:120px;object-fit:cover}
 .card h3{font-size:14px;margin:8px}
 .card p{margin:0 8px;color:#ff7a00;font-weight:bold}
-.card button{margin:8px;width:calc(100% - 16px);padding:8px;border:none;background:#ff7a00;color:#fff}
-#carrito{position:fixed;bottom:10px;right:10px;width:280px;background:#fff;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0,.3)}
-#lista{padding:10px;max-height:200px;overflow:auto}
+.card button{
+  margin:8px;width:calc(100% - 16px);
+  padding:8px;border:none;
+  background:#ff7a00;color:#fff;
+  border-radius:5px
+}
+#carrito{
+  position:fixed;bottom:10px;right:10px;
+  width:280px;background:#fff;
+  border-radius:10px;
+  box-shadow:0 4px 15px rgba(0,0,0,.3)
+}
+#lista{padding:10px;max-height:160px;overflow:auto;font-size:14px}
+#cliente{padding:10px;border-top:1px solid #ddd}
+#cliente input{
+  width:100%;padding:8px;margin-bottom:6px;
+  border-radius:5px;border:1px solid #ccc
+}
+#total{padding:8px;font-weight:bold;text-align:center}
+#wp{
+  background:#25D366;color:#fff;
+  width:100%;border:none;
+  padding:10px;font-size:15px
+}
 </style>
 </head>
 
@@ -23,60 +56,93 @@ header{background:#ff7a00;color:#fff;padding:15px;text-align:center}
 
 <header>🛒 Tienda</header>
 
-<div id="productos">Cargando...</div>
+<div id="buscador">
+  <input id="search" placeholder="Buscar producto...">
+</div>
+
+<div id="productos">Cargando productos...</div>
 
 <div id="carrito">
   <div id="lista"></div>
-  <button onclick="enviar()">WhatsApp</button>
+
+  <div id="cliente">
+    <input id="nombre" placeholder="Nombre">
+    <input id="direccion" placeholder="Dirección">
+  </div>
+
+  <div id="total">$0</div>
+  <button id="wp">Enviar por WhatsApp</button>
 </div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycby1n0v5Qd0uOR2vWXOIeaDoceBexRf85LcdxwvvwPcUknIobDk3YP01LMadfu58s4TO/exec";
-const WHATSAPP = "5492612090061";
+const API_URL="https://script.google.com/macros/s/AKfycbyWAAlnirX3IwxNHU8T4gQrV7Yy3GM2oqXBfNakG29fWVgboDdDh3pKmoHbqOX1Nw2y/exec";
+const WHATSAPP="5492612090061";
 
 let productos=[], carrito={};
 
 function cargarProductos(data){
   productos=data;
-  const c=document.getElementById("productos");
-  c.innerHTML="";
-  data.forEach(p=>{
-    c.innerHTML+=`
-      <div class="card">
-        <img src="${p.Imagen}">
-        <h3>${p.Descripcion}</h3>
-        <p>$${p.Precio}</p>
-        <button onclick="add('${p.Id_producto}')">Agregar</button>
-      </div>`;
-  });
+  renderProductos(productos);
 }
 
 const s=document.createElement("script");
 s.src=API_URL+"?callback=cargarProductos";
 document.body.appendChild(s);
 
+function renderProductos(lista){
+  const c=document.getElementById("productos");
+  c.innerHTML="";
+  lista.forEach(p=>{
+    c.innerHTML+=`
+    <div class="card">
+      <img src="${p.Imagen}">
+      <h3>${p.Descripcion}</h3>
+      <p>$${p.Precio}</p>
+      <button onclick="add('${p.Id_producto}')">Agregar</button>
+    </div>`;
+  });
+}
+
+document.getElementById("search").oninput=e=>{
+  const t=e.target.value.toLowerCase();
+  renderProductos(
+    productos.filter(p=>p.Descripcion.toLowerCase().includes(t))
+  );
+};
+
 function add(id){
   carrito[id]=(carrito[id]||0)+1;
-  render();
+  renderCarrito();
 }
-function render(){
+
+function renderCarrito(){
   const l=document.getElementById("lista");
-  let t=0; l.innerHTML="";
+  let total=0;
+  l.innerHTML="";
   for(let id in carrito){
     const p=productos.find(x=>x.Id_producto===id);
-    t+=p.Precio*carrito[id];
+    total+=p.Precio*carrito[id];
     l.innerHTML+=`${p.Descripcion} x${carrito[id]}<br>`;
   }
-  l.innerHTML+=`<b>Total $${t}</b>`;
+  document.getElementById("total").innerText="Total: $"+total;
 }
-function enviar(){
-  let m="Pedido%0A";
+
+document.getElementById("wp").onclick=()=>{
+  const n=nombre.value.trim();
+  const d=direccion.value.trim();
+  if(!n||!d){ alert("Completá nombre y dirección"); return; }
+
+  let msg=`🛒 Pedido%0A👤 ${n}%0A📍 ${d}%0A%0A`;
+  let total=0;
+
   for(let id in carrito){
     const p=productos.find(x=>x.Id_producto===id);
-    m+=`${p.Descripcion} x${carrito[id]}%0A`;
+    msg+=`• ${p.Descripcion} x${carrito[id]}%0A`;
+    total+=p.Precio*carrito[id];
   }
-  window.open(`https://wa.me/${WHATSAPP}?text=${m}`);
-}
+  msg+=`%0ATotal: $${total}`;
+  window.open(`https://wa.me/${WHATSAPP}?text=${msg}`);
+};
 </script>
 
 </body>
